# bt-dynamic

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  JUDGE.md  PLAN.md  README.en.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/pr-workflow/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
context/: conventions.md  structure.md
docs/: design-decisions.md  fetch-data.md  guarantees.md
examples/trend/: README.md  config.json  demo.tape  generate_data.py
examples/trend/data/: sample_m5.jsonl
issues/: 00_template.md
src/bt_dynamic/: __init__.py  cli.py  config.py  convert.py  data.py  engine.py  indicators.py  regime.py  selection.py  sizing.py
tests/: test_cli.py  test_config.py  test_convert.py  test_data.py  test_engine.py  test_indicators.py  test_regime.py  test_selection.py  test_sizing.py
